--- a/index.html
+++ b/index.html
@@ -1,12 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <nav class="blue">
+        <div class="container">
+            <div class="nav-wrapper">
+                <a href="#" class="brand-logo">SN</a>
+            </div>
+        </div>
+    </nav>
+
+    <div class="container forma">
+        <div class="row">
+            <div class="col center s12"><h2>Enter to SN</h2></div>
+        </div>
+        <div class="row">
+            <div class="input-field center col s12">
+                <input id="password" type="password" class="validate">
+                <label for="text">Login</label>
+            </div>
+        </div>
+        <div class="row">
+            <div class="input-field col s12">
+                <input id="email" type="email" class="validate">
+                <label for="password">Password</label>
+            </div>
+        </div>
+        <div class="row ">
+            <div class="col s12">
+                <label>
+                    <input type="checkbox" class="filled-in" />
+                    <span>Remember</span>
+                </label>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col s12"><a class="waves-effect blue waves-light btn knopka1">button</a></div>
+        </div>
+        <div class="row ">
+            <div class="col right"><a href="">Create new account</a></div>
+        </div>
+        
+    </div>
+
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 </body>
+
 </html>
