--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             </div>
         </div>
         <div class="row">
-            <div class="col s12"><a class="waves-effect blue waves-light btn knopka1">button</a></div>
+            <div class="col s12"><a class="waves-effect blue waves-light btn knopka1">Enter</a></div>
         </div>
         <div class="row ">
             <div class="col right"><a href="">Create new account</a></div>
