--- a/page2.html
+++ b/page2.html
@@ -30,14 +30,14 @@
             <div class="col s2 spusok">
                 <ul>
                     <li class="lif"><i class="material-icons">person</i> My profile</li>
-                    <li class="lif"><i class="material-icons">newspaper</i> News</li>
+                    <li class="lif"><i class="material-icons">newspaper</i><a href="./page3.html">News</a></li>
                     <li class="lif lif2"><i class="material-icons">unsubscribe</i> Message</li>
                     <li class="lif"><i class="material-icons">face_5</i> Friends</li>
                     <li class="lif"><i class="material-icons">event</i> Event</li>
                     <li class="lif"><i class="material-icons">movie</i> Media</li>
                 </ul>
             </div>
-            <div class="col s9">
+            <div class="col s10">
                 <div class="row">
                     <div class="col s8">
                         <h4>FRIENDS</h4>
