updates all pages and css

--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
         </div>
         <div class="row">
             <div class="input-field center col s12">
-                <input id="password" type="password" class="validate">
+                <input id="text" type="text" class="validate">
                 <label for="text">Login</label>
             </div>
         </div>
         <div class="row">
             <div class="input-field col s12">
-                <input id="email" type="email" class="validate">
+                <input id="password" type="password" class="validate">
                 <label for="password">Password</label>
             </div>
         </div>
