--- a/page3.html
+++ b/page3.html
@@ -15,7 +15,7 @@
     <nav class="blue">
         <div class="container">
             <div class="nav-wrapper">
-                <a href="#" class="brand-logo">SN</a>
+                <a href="index.html" class="brand-logo">SN</a>
                 <ul id="nav-mobile" class="right hide-on-med-and-down">
                     <li><img src="./img/av_64.png" alt=""></li>
                     <li><a href="badges.html">Luella Hubbard</a></li>
@@ -32,7 +32,7 @@
                     <li class="lif"><i class="material-icons">person</i> My profile</li>
                     <li class="lif"><i class="material-icons">newspaper</i> News</li>
                     <li class="lif lif2"><i class="material-icons">unsubscribe</i> Message</li>
-                    <li class="lif"><i class="material-icons">face_5</i> Friends</li>
+                    <li class="lif"><i class="material-icons">face_5</i><a href="page2.html"> Friends</a></li>
                     <li class="lif"><i class="material-icons">event</i> Event</li>
                     <li class="lif"><i class="material-icons">movie</i> Media</li>
                 </ul>
@@ -53,72 +53,81 @@
                 <div class="row">
                     <div class="col page3r">
                         <div class="row page3b1">
-                            <div><img src="./img/avatar_1.png" alt=""></div>
-                            <div class="zag">Pranav Talley
+                            <div class="col s1"><img src="./img/avatar_1.png" alt=""></div>
+                            <div class="col s11 zag">Pranav Talley
                                 <div class="chas">12:45:34</div>
                             </div>
-                        </div>
-                        <div class="row">Lorem, ipsum dolor sit amet consectetur Lorem, ipsum dolor sit amet consectet
-                            Lorem, ipsum dolor sit amet consectet adipisicing elit. Numquam alias officia animi hic
-                            cumque dolore, ab accusantium aspernatur modi porro incidunt dolorum asperiores inventore
-                            eius eveniet error omnis aperiam voluptatum!
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col page3r">
-                        <div class="row page3b1">
-                            <div><img src="./img/avatar_2.png" alt=""></div>
-                            <div class="zag">Pranav Talley
-                                <div class="chas">12:45:34</div>
-                            </div>
-                        </div>
-                        <div class="row">Lorem, ipsum dolor sit amet consectetur Lorem, ipsum dolor sit amet consectet
-                            Lorem, ipsum dolor sit amet consectet adipisicing elit. Numquam alias officia animi hic
-                            cumque dolore, ab accusantium aspernatur modi porro incidunt dolorum asperiores inventore
-                            eius eveniet error omnis aperiam voluptatum!</div>
-                        <div class="row boats">
-                            <div><img src="./img/Motorboat_at_Kankaria_lake.jpg" alt=""></div>
-                            <div><img src="./img/Motorboat_at_Kankaria_lake.jpg" alt=""></div>
-                            <div><img src="./img/Motorboat_at_Kankaria_lake.jpg" alt=""></div>
-                            <div><img src="./img/Motorboat_at_Kankaria_lake.jpg" alt=""></div>
-
-                        </div>
-
-
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col page3r">
-                        <div class="row page3b1">
-                            <div><img src="./img/avatar_3.png" alt=""></div>
-                            <div class="zag">Pranav Talley
-                                <div class="chas">12:45:34</div>
-                            </div>
-                        </div>
-                        <div class="row boat3">
-                            <div>
-                                <img src="./img/Motorboat_at_Kankaria_lake.jpg" alt="">
-                            </div>
-                        </div>
-                        <div class="row">Lorem, ipsum dolor sit amet consectetur Lorem, ipsum dolor sit amet consectet
-                            Lorem, ipsum dolor sit amet consectet adipisicing elit. Numquam alias officia animi hic
-                            cumque dolore, ab accusantium aspernatur modi porro incidunt dolorum asperiores inventore
-                            eius eveniet error omnis aperiam voluptatum!
                         </div>
                         <div class="row">
-                            <a class="orange-text" href="">SOMEWEBSITE.COM</a>
+                            <div class="col s12">
+                                Lorem, ipsum dolor sit amet consectetur Lorem, ipsum dolor sit amet consectet
+                                Lorem, ipsum dolor sit amet consectet adipisicing elit. Numquam alias officia animi hic
+                                cumque dolore, ab accusantium aspernatur modi porro incidunt dolorum asperiores
+                                inventore
+                                eius eveniet error omnis aperiam voluptatum!
+                            </div>
                         </div>
                     </div>
                 </div>
+                <div class="row">
+                    <div class="col page3r">
+                        <div class="row page3b1">
+                            <div class="col s1"><img src="./img/avatar_2.png" alt=""></div>
+                            <div class="col s11 zag">Pranav Talley
+                                <div class="chas">12:45:34</div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col s12">
+                                Lorem, ipsum dolor sit amet consectetur Lorem, ipsum dolor sit amet consectet
+                                Lorem, ipsum dolor sit amet consectet adipisicing elit. Numquam alias officia animi hic
+                                cumque dolore, ab accusantium aspernatur modi porro incidunt dolorum asperiores
+                                inventore
+                                eius eveniet error omnis aperiam voluptatum!
+                            </div>
+                        </div>
+                        <div class="row boat">
+                            <div class="col s3"><img src="./img/Motorboat_at_Kankaria_lake.jpg" alt=""></div>
+                            <div class="col s3"><img src="./img/Motorboat_at_Kankaria_lake.jpg" alt=""></div>
+                            <div class="col s3"><img src="./img/Motorboat_at_Kankaria_lake.jpg" alt=""></div>
+                            <div class="col s3"><img src="./img/Motorboat_at_Kankaria_lake.jpg" alt=""></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col page3r">
+                        <div class="row page3b1">
+                            <div class="col s1"><img src="./img/avatar_3.png" alt=""></div>
+                            <div class="col s11 zag">Pranav Talley
+                                <div class="chas">12:45:34</div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col s12">
+                                I like this article!
+                                <div class="card">
+                                    <div class="card-image">
+                                        <img src="https://picsum.photos/id/237/1500/300">
+                                    </div>
+                                    <div class="card-content">
+                                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Adipisci harum sit
+                                            eum sapiente nulla deleniti, temporibus fuga repudiandae excepturi itaque
+                                            rem enim ex in illo voluptatibus impedit laborum sed tenetur.</p>
+                                    </div>
+                                    <div class="card-action">
+                                        <a href="#">This is a link</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
 
+                    </div>
+                </div>
             </div>
-        </div>
-    </div>
 
 
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 </body>
 
 </html>
