--- a/page3.html
+++ b/page3.html
@@ -125,9 +125,12 @@
                 </div>
             </div>
 
+        </div>
+    </div>
 
 
-            <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 </body>
 
 </html>
