--- a/page3.html
+++ b/page3.html
@@ -29,7 +29,7 @@
         <div class="row">
             <div class="col s2 spusok">
                 <ul>
-                    <li class="lif"><i class="material-icons">person</i> My profile</li>
+                    <li class="lif"><i class="material-icons">person</i><a href="page4.html"> My profile</a></li>
                     <li class="lif"><i class="material-icons">newspaper</i> News</li>
                     <li class="lif lif2"><i class="material-icons">unsubscribe</i> Message</li>
                     <li class="lif"><i class="material-icons">face_5</i><a href="page2.html"> Friends</a></li>
