--- a/page4.html
+++ b/page4.html
@@ -33,7 +33,7 @@
                     <li class="lif"><i class="material-icons">newspaper</i> News</li>
                     <li class="lif lif2"><i class="material-icons">unsubscribe</i> Message</li>
                     <li class="lif"><i class="material-icons">face_5</i><a href="page2.html"> Friends</a></li>
-                    <li class="lif"><i class="material-icons">event</i> Event</li>
+                    <li class="lif"><i class="material-icons">event</i><a href="page5.html"> Events</a></li>
                     <li class="lif"><i class="material-icons">movie</i> Media</li>
                 </ul>
             </div>
@@ -127,11 +127,11 @@
                             </div>
                             <div class="card-action">
                                 <div class="row">
-                                    <div class="col s3">Birthday:</div>
+                                    <div class="col s3 sp3">Birthday:</div>
                                     <div class="col blue-text">August</div>
                                 </div>
                                 <div class="row">
-                                    <div class="col s3">City</div>
+                                    <div class="col s3 sp3">City</div>
                                     <div class="col blue-text">New Orleans</div>
                                 </div>
                             </div>
