--- a/page2.html
+++ b/page2.html
@@ -17,7 +17,7 @@
             <div class="nav-wrapper">
                 <a href="index.html" class="brand-logo">SN</a>
                 <ul id="nav-mobile" class="right hide-on-med-and-down">
-                    <li><img src="./img/av_64.png" alt=""></li>
+                    <li><i><img src="./img/av_64.png" alt=""></i></li>
                     <li><a href="badges.html">Luella Hubbard</a></li>
 
                 </ul>
@@ -29,28 +29,27 @@
         <div class="row">
             <div class="col s2 spusok">
                 <ul>
-                    <li class="lif"><i class="material-icons">person</i> My profile</li>
-                    <li class="lif"><i class="material-icons">newspaper</i><a href="./page3.html">News</a></li>
-                    <li class="lif lif2"><i class="material-icons">unsubscribe</i> Message</li>
-                    <li class="lif"><i class="material-icons">face_5</i> Friends</li>
-                    <li class="lif"><i class="material-icons">event</i> Event</li>
-                    <li class="lif"><i class="material-icons">movie</i> Media</li>
+                    <li class="lif"><i class="material-icons">person</i><a href="page4.html"> My profile</a></li>
+                    <li class="lif"><i class="material-icons">newspaper</i><a href="page3.html">News</a></li>
+                    <li class="lif lif2"><i class="material-icons">unsubscribe</i><a href="page6.html"> Message</a></li>
+                    <li class="lif blue lighten-4"><i class="material-icons">face_5</i>Friends</li>
+                    <li class="lif"><i class="material-icons">event</i><a href="page5.html">Events</a></li>
+                    <li class="lif"><i class="material-icons">movie</i>Media</li>
                 </ul>
             </div>
             <div class="col s10">
-                <div class="row">
-                    <div class="col s7">
-                        <h4>FRIENDS</h4>
-                    </div>
-                    <div class="col s5 ht">
-                        <div class="input-field col s11">
-
-                            <input type="text" id="autocomplete-input" class="autocomplete">
-                            <label for="autocomplete-input">Search</label>
-                        </div>
-                        <div class="col s1"> <a class="btn-floating btn waves-effect waves-light blue"><i class="material-icons">search</i></a></div>
-                    </div>
+                <div class="col s7">
+                    <h4>FRIENDS</h4>
                 </div>
+                <div class="col s5 ht">
+                    <div class="input-field col s11">
+                        <input type="text" id="autocomplete-input" class="autocomplete">
+                        <label for="autocomplete-input">Search</label>
+                    </div>
+                    <div> <a class="btn-floating btn waves-effect waves-light blue"><i
+                                class="material-icons">search</i></a></div>
+                </div>
+
                 <div class="row spusok2">
                     <div class="col s2"><img src="./img/avatar_1.png" alt=""></div>
                     <div class="col s10">
