--- a/page3.html
+++ b/page3.html
@@ -17,9 +17,8 @@
             <div class="nav-wrapper">
                 <a href="index.html" class="brand-logo">SN</a>
                 <ul id="nav-mobile" class="right hide-on-med-and-down">
-                    <li><img src="./img/av_64.png" alt=""></li>
+                    <li><i><img src="./img/av_64.png" alt=""></i></li>
                     <li><a href="badges.html">Luella Hubbard</a></li>
-
                 </ul>
             </div>
         </div>
@@ -30,26 +29,23 @@
             <div class="col s2 spusok">
                 <ul>
                     <li class="lif"><i class="material-icons">person</i><a href="page4.html"> My profile</a></li>
-                    <li class="lif"><i class="material-icons">newspaper</i> News</li>
-                    <li class="lif lif2"><i class="material-icons">unsubscribe</i> Message</li>
+                    <li class="lif blue lighten-4"><i class="material-icons ">newspaper</i><a href="page3.html">News</a></li>
+                    <li class="lif lif2"><i class="material-icons">unsubscribe</i><a href="page6.html"> Message</a></li>
                     <li class="lif"><i class="material-icons">face_5</i><a href="page2.html"> Friends</a></li>
-                    <li class="lif"><i class="material-icons">event</i> Event</li>
+                    <li class="lif"><i class="material-icons">event</i><a href="page5.html">Events</a></li>
                     <li class="lif"><i class="material-icons">movie</i> Media</li>
                 </ul>
             </div>
             <div class="col s10">
-                <div class="row">
-                    <div class="col s11">
-                        <h4>NEWS</h4>
-                    </div>
-                    <div class="col s1">
-                        <div class="input-field col s12">
-                            <a class="btn-floating btn-medium blue waves-effect waves-light red"><i
-                                    class="material-icons">add</i></a>
-                        </div>
+                <div class="col s11">
+                    <h4>NEWS</h4>
+                </div>
+                <div class="col s1">
+                    <div class="input-field col s12">
+                        <a class="btn-floating btn-medium blue waves-effect waves-light red"><i
+                                class="material-icons">add</i></a>
                     </div>
                 </div>
-
                 <div class="row">
                     <div class="col page3r">
                         <div class="row page3b1">
