--- a/page4.html
+++ b/page4.html
@@ -17,27 +17,26 @@
             <div class="nav-wrapper">
                 <a href="index.html" class="brand-logo">SN</a>
                 <ul id="nav-mobile" class="right hide-on-med-and-down">
-                    <li><img src="./img/av_64.png" alt=""></li>
+                    <li><i><img src="./img/av_64.png" alt=""></i></li>
                     <li><a href="badges.html">Luella Hubbard</a></li>
-
                 </ul>
             </div>
         </div>
     </nav>
 
     <div class="container">
-        <div class="row mart">
+        <div class="row">
             <div class="col s2 spusok">
                 <ul>
-                    <li class="lif"><i class="material-icons">person</i> My profile</li>
-                    <li class="lif"><i class="material-icons">newspaper</i> News</li>
-                    <li class="lif lif2"><i class="material-icons">unsubscribe</i> Message</li>
+                    <li class="lif blue lighten-4"><i class="material-icons">person</i><a href="page4.html"> My profile</a></li>
+                    <li class="lif"><i class="material-icons">newspaper</i><a href="page3.html">News</a></li>
+                    <li class="lif lif2"><i class="material-icons">unsubscribe</i><a href="page6.html"> Message</a></li>
                     <li class="lif"><i class="material-icons">face_5</i><a href="page2.html"> Friends</a></li>
                     <li class="lif"><i class="material-icons">event</i><a href="page5.html"> Events</a></li>
                     <li class="lif"><i class="material-icons">movie</i> Media</li>
                 </ul>
             </div>
-            <div class="col s3">
+            <div class="col s3 marg">
                 <div class="row">
                     <div class="col s12">
                         <div class="card">
@@ -117,7 +116,7 @@
                 </div>
             </div>
 
-            <div class="col s7">
+            <div class="col s7 marg">
                 <div class="row">
                     <div class="col s12">
                         <div class="card">
