--- a/page5.html
+++ b/page5.html
@@ -17,9 +17,8 @@
             <div class="nav-wrapper">
                 <a href="index.html" class="brand-logo">SN</a>
                 <ul id="nav-mobile" class="right hide-on-med-and-down">
-                    <li><img src="./img/av_64.png" alt=""></li>
+                    <li><i><img src="./img/av_64.png" alt=""></i></li>
                     <li><a href="badges.html">Luella Hubbard</a></li>
-
                 </ul>
             </div>
         </div>
@@ -29,31 +28,30 @@
         <div class="row">
             <div class="col s2 spusok">
                 <ul>
-                    <li class="lif"><i class="material-icons">person</i> My profile</li>
+                    <li class="lif"><i class="material-icons">person</i><a href="page4.html"> My profile</a></li>
                     <li class="lif"><i class="material-icons">newspaper</i><a href="./page3.html">News</a></li>
-                    <li class="lif lif2"><i class="material-icons">unsubscribe</i> Message</li>
-                    <li class="lif"><i class="material-icons">face_5</i> Friends</li>
-                    <li class="lif"><i class="material-icons">event</i> Event</li>
+                    <li class="lif lif2"><i class="material-icons">unsubscribe</i><a href="page6.html"> Message</a></li>
+                    <li class="lif"><i class="material-icons">face_5</i><a href="page2.html"> Friends</a></li>
+                    <li class="lif blue lighten-4"><i class="material-icons">event</i><a href="page5.html"> Events</a></li>
                     <li class="lif"><i class="material-icons">movie</i> Media</li>
                 </ul>
             </div>
             <div class="col s10">
-                <div class="row">
-                    <div class="col s6">
+               
+                    <div class="col s4">
                         <h4>EVENTS</h4>
                     </div>
-                    <div class="col s5 ht">
-                        <div class="input-field col s9">
-
+                    <div class="col s8 ht">
+                        <div class="input-field col s7">
                             <input type="text" id="autocomplete-input" class="autocomplete">
                             <label for="autocomplete-input">Search</label>
                         </div>
-                        <div class="col s1"> <a class="btn-floating btn waves-effect waves-light blue"><i
+                        <div><a class="btn-floating btn waves-effect waves-light blue"><i
                                     class="material-icons">search</i></a></div>
-                        <div class="col s1"> <a class="btn-floating btn waves-effect waves-light blue"><i
+                        <div><a class="btn-floating btn waves-effect waves-light blue"><i
                                     class="material-icons">add</i></a></div>
                     </div>
-                </div>
+               
                 <div class="row">
 
                     <div class="col s12">
@@ -63,7 +61,7 @@
                             </div>
                             <div class="card-content">
                                 <div class="row">
-                                    <div class="col s12 zsy sp3"> 
+                                    <div class="col s12 zsy sp3">
                                         <div class="p4pic">
                                             <i class="material-icons">schedule</i>
                                             <span>10:00 AM</span>
@@ -79,9 +77,11 @@
                                     </div>
                                 </div>
                                 <div class="row">
-                                    <div class="col s12"> <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Adipisci harum sit
-                                        eum sapiente nulla deleniti, temporibus fuga repudiandae excepturi itaque
-                                        rem enim ex in illo voluptatibus impedit laborum sed tenetur.</p></div>
+                                    <div class="col s12">
+                                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Adipisci harum sit
+                                            eum sapiente nulla deleniti, temporibus fuga repudiandae excepturi itaque
+                                            rem enim ex in illo voluptatibus impedit laborum sed tenetur.</p>
+                                    </div>
                                 </div>
                             </div>
                             <div class="card-action right-align ">
@@ -96,7 +96,7 @@
                             </div>
                             <div class="card-content">
                                 <div class="row">
-                                    <div class="col s12 zsy sp3"> 
+                                    <div class="col s12 zsy sp3">
                                         <div class="p4pic">
                                             <i class="material-icons">schedule</i>
                                             <span>10:00 AM</span>
@@ -112,9 +112,11 @@
                                     </div>
                                 </div>
                                 <div class="row">
-                                    <div class="col s12"> <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Adipisci harum sit
-                                        eum sapiente nulla deleniti, temporibus fuga repudiandae excepturi itaque
-                                        rem enim ex in illo voluptatibus impedit laborum sed tenetur.</p></div>
+                                    <div class="col s12">
+                                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Adipisci harum sit
+                                            eum sapiente nulla deleniti, temporibus fuga repudiandae excepturi itaque
+                                            rem enim ex in illo voluptatibus impedit laborum sed tenetur.</p>
+                                    </div>
                                 </div>
                             </div>
                             <div class="card-action right-align ">
@@ -129,7 +131,7 @@
                             </div>
                             <div class="card-content">
                                 <div class="row">
-                                    <div class="col s12 zsy sp3"> 
+                                    <div class="col s12 zsy sp3">
                                         <div class="p4pic">
                                             <i class="material-icons">schedule</i>
                                             <span>10:00 AM</span>
@@ -145,9 +147,11 @@
                                     </div>
                                 </div>
                                 <div class="row">
-                                    <div class="col s12"> <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Adipisci harum sit
-                                        eum sapiente nulla deleniti, temporibus fuga repudiandae excepturi itaque
-                                        rem enim ex in illo voluptatibus impedit laborum sed tenetur.</p></div>
+                                    <div class="col s12">
+                                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Adipisci harum sit
+                                            eum sapiente nulla deleniti, temporibus fuga repudiandae excepturi itaque
+                                            rem enim ex in illo voluptatibus impedit laborum sed tenetur.</p>
+                                    </div>
                                 </div>
                             </div>
                             <div class="card-action right-align ">
