page 6 added bgc

--- a/page6.html
+++ b/page6.html
@@ -41,7 +41,7 @@
                 <div class="row no-margin">
                     <div class="col s4 no-padding">
 
-                        <div class="p6l bord">
+                        <div class="p6l bord blue lighten-3">
                             <div><img src="./img/avatar_3.png" alt=""></div>
                             <div class="zag">Pranav Talley
                                 <div class="zag0">Lorem ipsum dolor sit amet consectetur adipisicing elit. </div>
